--- a/index.ipynb
+++ b/index.ipynb
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,15 +546,27 @@
     "    number=number or len(neighbors)-1\n",
     "    neighbor_distance=distance_all(first_neighbor, neighbors)\n",
     "    sorted_distances=sorted(neighbor_distance, key=lambda neighbor: neighbor['distance'])\n",
-    "    return sorted_distances[nu]\n",
+    "    return sorted_distances[0:number]\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8, 'distance': 0.0},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
     "# [{'avenue': 5, 'distance': 1.0, 'name': 'Bob', 'street': 8},\n",
